# auraframes

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml
auraframes/: __init__.py  aura.py  client.py  exceptions.py  exif.py  export.py  tui.py
auraframes/api/: account_api.py  activity_api.py  asset_api.py  attachment_api.py  frame_api.py  playlist_api.py
auraframes/aws/: aws_client.py  s3_client.py  sqs_client.py
auraframes/models/: activity.py  asset.py  attachment.py  frame.py  meta.py  user.py
auraframes/services/: __init__.py  caption_service.py  image_service.py
auraframes/utils/: dt.py  io.py  pagination.py  retry.py  settings.py  validation.py
tests/: __init__.py  conftest.py  test_apis.py  test_aura.py  test_client.py  test_models.py
tests/test_services/: test_caption_service.py  test_image_service.py
tests/test_utils/: test_dt.py  test_io.py  test_pagination.py  test_retry.py  test_validation.py
