[project]
name = "auraframes"
version = "0.1.0"
description = "Aura Frames API client"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.26.38",
    "python-dotenv>=1.0.0",
    "httpx>=0.23.1",
    "botocore>=1.29.38",
    "loguru>=0.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "piexif>=1.1.3",
    "geopy>=2.3.0",
    "pillow>=9.5.0",
    "h2>=4.1.0",
    "textual>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "auraframes.models.meta"
ignore_errors = true  # Dynamic Pydantic model creation

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
